.provarCaches/00D410000011HE0EAM/objects/rstk__sygradefunc__c.object
<CustomObject>
    <description>sygradefunc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_abccycphy_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level abc/cycle cnt/phys inv activ</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_allocation_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level allocations activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_bomrtglink_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level bom-rtg link activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_calendovr_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level shop calendar overrides acti</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_concursched_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level concurrent scheduling activa</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_consigned_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level consigned inventory activate</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_cstrollup_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level cost rollup activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_eco_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level eco activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_labmacheff_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level labor machine efficiency act</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_landedcost_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level landed cost activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_multsite_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level multi site activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_nonnettable_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level non nettable inventory activ</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_outsideop_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level outside operations activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_poagr_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level po agreements activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_proj_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level project cntl activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_rcvginsp_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level receiving/inspection activat</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_requisition_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level requisitions activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_routing_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level routings activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_rwkword_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level rework orders activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_scrap_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level scrap recording activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sygradefunc_vendrfq_lvl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>grade level vendor rfq activated</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Grade Level Functionality</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grade Level Functionalities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>